SERVER-9578 install mongos signal handler for SIGUSR1 before spawning any threads

Conflicts:
	src/mongo/s/server.cpp